data/raw_logs/lexical/lex_14.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_14.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_14.c:1:24: error: expected ',' or ';' before '~' token
    1 | int main() { int x = 5 ~ 2; }
      |                        ^
